fix 2020 size on mobile;

--- a/atoms/default/client/css/_pledge-header.scss
+++ b/atoms/default/client/css/_pledge-header.scss
@@ -66,6 +66,7 @@
       &__year {
         color: #333;
         line-height: 0.85;
+        font-size: 48px;
         @include mq(tablet) {
           font-size: 80px;
         }
